--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "xwt-official",
+  "name": "chika-official",
   "version": "0.1.0",
+  "description": "Chika's official website.",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -18,7 +19,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.1.2",
+    "less-loader": "^11.0.0"
   },
   "eslintConfig": {
     "root": true,
