--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
+    "animejs": "^3.2.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
