--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chika-official",
   "version": "1.0.0",
-  "description": "Chika's official website.",
   "private": true,
+  "description": "Chika's official website.",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -22,7 +22,9 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.1.2",
-    "less-loader": "^11.0.0"
+    "less-loader": "^11.0.0",
+    "style-resources-loader": "^1.4.1",
+    "vue-cli-plugin-style-resources-loader": "~0.1.5"
   },
   "eslintConfig": {
     "root": true,
