Load website contents dynamically

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "preview": "lt -p 89 -s chika"
+    "build-mock": "vue-cli-service build && powershell cp -r content/ chika-official/content/",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
