--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-mock": "vue-cli-service build && powershell cp -r content/ chika-official/content/",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-with-content": "vue-cli-service build && powershell cp -r chika-resources/content/ chika-official/content/"
   },
   "dependencies": {
     "vue": "^3.2.13",
